infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: portal-srv
spec:
  rules:
    - host: quanta-trading.dev
      http:
        paths:
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-srv
                port: 
                  number: 4000
